--- a/app/views/templates/orderHistory.html
+++ b/app/views/templates/orderHistory.html
@@ -6,8 +6,7 @@
 		
 		<div style="font-size: large;padding-left: 89px;margin-top: 24px;">Last 10 Orders:</div>
 		<div class="row">
-			<div class="col-lg-1"></div>
-			<div class="col-lg-10" >
+			<div class="col-lg-12" >
 				<form>
 					<!--<fieldset style="border: 2px solid #7a7a61 !important;margin-top:2px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 14px; height: 100px">-->
 						<div>
@@ -16,20 +15,17 @@
  									<tr>
    				 						<th>S.no</th>
     			 						<th>Orders</th>
-   				 						<th>Orders Stats</th>
+   				 						<th>Orders Status</th>
   				 						<th>date</th>
  			 						</tr>
   								</thead>
   								<tbody>
-                  {{orderHistory.email}}
-                
-
-  								    <tr ng-repeat = "order in orderHistory" >
+              				<tr ng-repeat = "order in orderHistory" >
     									     <td>{{$index+1}}</td>
-    									     <td>{{order.id}}</td>
-    									     <td>{{order.status}}</td>
+    									     <td><a href="javascript:" ng-click="viewOrderDetails(order);">{{order.id}}</a></td>
+											     <td>{{order.status}}</td>
     									     <td>{{order.date}}</td>
-  									 </tr>
+    									</tr>
   								</tbody>
 
   							</table>	
@@ -39,9 +35,52 @@
 					<!--</fieldset>-->	
 				</form>
 			</div>
-			<div class="col-lg-1"></div>
+		
 		</div>	
 	</div>
+
+      	<div id="confirmModal" class="modal fade" style="top: 100px;" aria-hidden="true" role="dialog">
+     		<div class="modal-dialog">
+        		<div class="modal-content">
+
+            		<div class="modal-header"> 
+                        <span><label>Order-Id:{{orders.id}}</label></span>
+                		<button class="close" type="button" data-ng-click="close();" data-ng-disabled="confirmModel.$invalid">
+                    		<span aria-hidden="true">X</span>
+                		</button>
+            		</div>
+
+
+            		<div class="modal-body">
+            			 <label>E-mail Id </label> <span style="padding-left: 57px;">:{{orders.email}}</span><br>
+            			 <label>Phone Number</label><span style="padding-left: 20px;">:{{orders.phone}}</span><br>
+            			 <label>Date</label><span style="padding-left: 91px;">:{{orders.date}}</span><br>
+            			 <label>Status</label><span style="padding-left: 79px;">:{{orders.status}}</span><br>
+                    <div>
+                    <table  style="width:100%;background-color: lightskyblue" class="table table-bordered table-striped table-hover">
+                       <thead>
+                            <tr>
+                              <th>S.no</th>
+                              <th>Rice Type</th>
+                              <th>Quantity</th>
+                            </tr>
+                      </thead>
+                      <tbody>
+                           <tr ng-repeat="order in orders.orderList">
+                              <td>{{$index+1}}</td>
+                              <td>{{order.riceType}}</td>
+                              <td>{{order.quantity}}</td>
+                          </tr>
+                      </tbody>
+                    </table>  
+                     </div>      			
+                  </div>	
+            		<div class="modal-footer">
+                		<input type="button" class="btn btn-cancel" data-ng-click="close()" data-ng-disabled="confirmModel.$invalid" value="Close">
+            		</div>
+        		</div>
+        	</div>
+		</div>
 	<div class="col-lg-2"></div>
 </div>
 </div>
