--- a/app/views/templates/trackMyOrder.html
+++ b/app/views/templates/trackMyOrder.html
@@ -12,7 +12,7 @@
                 <div class="col-lg-12" style="font-size:16px">
                     <div class="dropdown">
                           <img height="12" width="12" src="\images\dot.png">
-                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown">          Recived   our Ordes
+                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown">          Recived   your Ordes
                                   <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu" style="margin-left: 85px;">
@@ -47,7 +47,7 @@
                 <div class="col-lg-12" style="font-size:16px">
                     <div class="dropdown">
                           <img height="12" width="12" src="\images\dot.png">
-                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown">          Read to delivery
+                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown"> Read to delivery
                                   <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu" style="margin-left: 85px;">
@@ -64,7 +64,7 @@
                 <div class="col-lg-12" style="font-size:16px">
                     <div class="dropdown">
                           <img height="12" width="12" src="\images\dot.png">
-                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown">          On the way to delivery
+                            <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown">On the way to delivery
                                   <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu" style="margin-left: 85px;">
