--- a/app/views/templates/UserReg.html
+++ b/app/views/templates/UserReg.html
@@ -7,12 +7,13 @@
 		        <h3><u><center> User Registration </center></u></h3>
 
 		   </div>
-		<div style="color: red;font-size: 20px;">*{{msg}}</div>   
+		   
 		<form>
 		<center>
 		<fieldset class="fieldset">
 		   
            <div class="row" style="margin-bottom: 5px; margin-top:25px">
+           <div style="color: red;font-size: 20px;">{{msg}}</div>
 			 	<div class="col-lg-12">
 					<label class="lbl" style="padding-left: 56px;">First Name <span style="color:red">*</span>:</label>
 					<input type="text" name="fName" ng-model="fName" required maxlength="25">
@@ -39,14 +40,16 @@
 			<div class="row" style="margin-bottom: 5px">
 			  	<div class="col-lg-12">
 					<span><label class="lbl" style="padding-left: 143px;">Password<span style="color:red">*</span>:</label></span>
-					<input type="password" name="password" ng-model="password" id="textbox" maxlength="10" required >(4-10 digits)
+					<input type="password" name="password" ng-model="password" id="textbox" maxlength="10"  ng-model-options="{ updateOn: 'blur' }"
+       required pattern=".{2,}">(4-10 digits)
 			  	</div>
 			</div>
 			<div class="row" style="margin-bottom: 5px">
 			  	<div class="col-lg-12">
 					<span><label class="lbl">Conform Password<span style="color:red">*</span>:</label></span>
-					<input type="password" name="conformpassword" ng-model="confirmpassword" maxlength="10" required>
+					<input type="password" name="conformpassword" ng-model="confirmpassword" ng-change="confirmPassword();" maxlength="10" required>
 			  	</div>
+			  	<span ng-show="pswMatch" style="padding-left: 146px;color: red;">* {{confirmePwd}}</span>
 			</div>
 			<div class="row" style="margin-bottom: 5px">
 			  	<div class="col-lg-4">
